Deployment/dev/k8sClusterDepAWSKOPS/modules/hn-ms3/ip-cluster-hn.yml
apiVersion: v1
kind: Service
metadata:
  name: hn-ms3-cluster-ip
  namespace: hn-ms3
spec:
  type: ClusterIP
  selector:
    app: hn-ms3
  ports:
    - port: 3050        # Used in multip client system
      targetPort: 3050  # The EXPOSE port of container
      # nodePort: 32100
