Deployment/dev/k8sClusterDepAWSKOPS/modules/hn-ms3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: hn-ms3
  name: hn-ms3-ingress
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: 'api.hn.com'
      http:
        paths:
          - path: /hn-ms3(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: hn-ms3-cluster-ip
                port:
                  number: 3050                             

# /hn-ms3               -->  /
# /hn-ms3/muf           -->  /muf
